--- a/css/components/typography.css
+++ b/css/components/typography.css
@@ -74,3 +74,39 @@
   }
  }
 
+ 
+ 
+ @media screen and (min-width:1024px){
+    :root{
+  /* Body font size */
+  --small-body-size:1rem; /*  16px */
+  --normal-body-size:1.25rem; /* 20px */
+  --big-body-size:1.75rem; /*  28px */
+  --bigger-body-size:2rem; /*  32px */
+
+  /* Title font size */
+  --small-title-size:3rem; /*  48px */
+  --normal-title-size:3.5rem; /*  56px */
+  --big-title-size:1.75rem; /*  64px */
+  --bigger-title-size:5rem; /*  80px */
+ }
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: var(--display-font);
+    font-weight: var(--semi- --bold-font);
+}
+.display-font{
+    font-family: var(--display-font);
+}
+
+.body-font{
+    font-family: var(--body-font);
+}
+
+
